--- a/app/src/main/res/layout/fragment_topic.xml
+++ b/app/src/main/res/layout/fragment_topic.xml
@@ -5,6 +5,7 @@
   android:layout_height="match_parent"
   android:background="@color/windowBackground"
   >
+
   <com.example.bill.delta.view.widget.EmptyRecyclerView
     android:id="@+id/rv"
     android:layout_width="match_parent"
@@ -12,14 +13,11 @@
     android:overScrollMode="never"
     />
 
-  <TextView
+  <ProgressBar
     android:id="@+id/empty_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:minHeight="200dp"
-    android:text="没有内容"
-    android:textColor="@color/color_secondary_999999"
-    android:textSize="@dimen/text_dimens_17sp"
+    android:layout_height="64dp"
+    android:layout_gravity="center"
     />
+
 </FrameLayout>
